<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="missingPrefix"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_04"
    android:layout_marginTop="?attr/actionBarSize">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/color_03">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="102.5dp"
                android:layout_height="match_parent"
                android:text="@string/myinfo_text_id"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/color_05"
                android:gravity="start|center"
                android:paddingLeft="@dimen/myinfo_tv_left_margin" />

            <TextView
                android:id="@+id/myinfo_text_id"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="14sp"
                android:gravity="start|center"
                android:textColor="@color/color_10" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/color_12" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="102.5dp"
                android:layout_height="match_parent"
                android:text="@string/myinfo_text_name"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/color_05"
                android:gravity="start|center"
                android:paddingLeft="@dimen/myinfo_tv_left_margin" />

            <TextView
                android:id="@+id/myinfo_text_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="14sp"
                android:gravity="start|center"
                android:textColor="@color/color_10" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/color_12" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="102.5dp"
                android:layout_height="match_parent"
                android:text="@string/myinfo_text_phone"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/color_05"
                android:gravity="start|center"
                android:paddingLeft="@dimen/myinfo_tv_left_margin" />

            <TextView
                android:id="@+id/myinfo_text_phone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="14sp"
                android:gravity="start|center"
                android:textColor="@color/color_10" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/color_12" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="102.5dp"
                android:layout_height="match_parent"
                android:text="@string/myinfo_text_point"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/color_05"
                android:gravity="start|center"
                android:paddingLeft="@dimen/myinfo_tv_left_margin" />

            <TextView
                android:id="@+id/myinfo_text_point"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="14sp"
                android:gravity="start|center"
                android:textColor="@color/color_10" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/color_12" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true">

        <ImageView
            android:id="@+id/myinfo_iv_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/btn_type1_click_event" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/myinfo_btn_text"
            android:textSize="17sp"
            android:textColor="@color/color_03"
            android:gravity="center|center_horizontal"
            app:font="custom1" />
    </RelativeLayout>
</RelativeLayout>