<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="missingPrefix"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/progress_ll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_45"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="348dp"
            android:gravity="bottom|center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/progress_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/progress_img_bottom_margin" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/progress_loading"
                android:textColor="@color/color_03"
                android:textSize="16sp" />

        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/tool_bar_ticket"
            android:textSize="18sp"
            android:textColor="@color/color_02"
            app:font="custom1" />

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:paddingRight="@dimen/menu_item_img_right_padding"
            android:paddingTop="@dimen/menu_item_img_top_padding">

            <ImageView
                android:id="@+id/ivCart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_menu_cart" />

            <TextView
                android:id="@+id/menu_cart_tv"
                android:layout_width="7.5dp"
                android:layout_height="7.5dp"
                android:layout_gravity="top|right"
                android:layout_marginTop="@dimen/cart_btn_tv_top_margin"
                android:layout_marginRight="@dimen/cart_btn_tv_right_margin"
                android:gravity="center"
                android:background="@drawable/bg_num_round_01"
                android:visibility="invisible" />
        </FrameLayout>
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:id="@+id/flStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="6dp"
                android:paddingBottom="6dp">

                <include layout="@layout/ticket_item" />
            </FrameLayout>
            <!--divider-->
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/color_12" />

            <!--Date-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:gravity="center_vertical"
                android:background="@color/color_14">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_date"
                    style="@style/ticket_detail_key" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="~~~~"
                    android:layout_alignParentRight="true"
                    style="@style/ticket_detail_value"
                    android:id="@+id/tvDate" />
            </RelativeLayout>
            <!--divider-->
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/color_12" />

            <!--Store-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:gravity="center_vertical"
                android:background="@color/color_14">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_store"
                    style="@style/ticket_detail_key"
                    android:id="@+id/textView" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="~~~~"
                    style="@style/ticket_detail_value"
                    android:layout_alignBaseline="@+id/textView"
                    android:layout_alignBottom="@+id/textView"
                    android:layout_alignParentEnd="true"
                    android:id="@+id/tvStore" />
            </RelativeLayout>
            <!--divider-->
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/color_12" />

            <!--Menu-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:gravity="center_vertical"
                android:background="@color/color_14">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_menu"
                    style="@style/ticket_detail_key" />
            </RelativeLayout>
            <!--divider-->
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/color_12" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ListView
                    android:id="@+id/lvDishDetail"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"></ListView>

                <FrameLayout
                    android:id="@+id/fl_sold_out"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:visibility="gone"
                    android:background="@color/color_45">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center|center_horizontal"
                        android:text="@string/ticket_sold_out"
                        android:textSize="18sp"
                        android:textColor="@color/color_37" />
                </FrameLayout>
            </RelativeLayout>


            <!--Point-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:gravity="center_vertical"
                android:background="@color/color_14">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_point"
                    style="@style/ticket_detail_key" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:layout_alignParentRight="true"
                    style="@style/ticket_detail_value"
                    android:id="@+id/tvPoint" />
            </RelativeLayout>
            <!--divider-->
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/color_12" />

            <!--Method of Payment-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:gravity="center_vertical"
                android:background="@color/color_14">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_method_payment"
                    style="@style/ticket_detail_key" />

                <TextView
                    android:id="@+id/tvMethodPayment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Card"
                    android:layout_alignParentRight="true"
                    style="@style/ticket_detail_value" />
            </RelativeLayout>
            <!--divider-->
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/color_12" />

            <!--Payment Details title-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/color_14"
                android:orientation="horizontal"
                android:paddingStart="@dimen/payment_ll_left_padding">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="start|center"
                    android:text="@string/payment_detail_tv_title"
                    style="@style/ticket_detail_key" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/color_12" />

            <!--Payment Details content-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="135.5dp"
                android:orientation="vertical"
                android:background="@color/color_43"
                android:padding="@dimen/payment_ll_padding"
                android:weightSum="3">


                <!--Subtotal 정보-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="start|center"
                        android:text="@string/payment_details_tv_title_01" />

                    <TextView
                        android:id="@+id/ticket_tv_subtotal_price"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="end|center" />

                </LinearLayout>

                <!--Tax 정보-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="start|center"
                        android:text="@string/payment_details_tv_title_03" />

                    <TextView
                        android:id="@+id/ticket_tv_tax_price"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="end|center" />

                </LinearLayout>

                <!--Use Point 정보-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="start|center"
                        android:text="@string/payment_details_tv_title_02" />

                    <TextView
                        android:id="@+id/ticket_tv_usepoint_price"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="end|center" />

                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/color_12" />

            <!--total 정보-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:orientation="horizontal"
                android:padding="@dimen/payment_ll_padding"
                android:background="@color/color_03">

                <TextView
                    android:id="@+id/payment_detatils_tv_total_count"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="start|center"
                    android:text="Total"
                    android:textColor="@color/color_15" />

                <TextView
                    android:id="@+id/tvTotal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="end|center"
                    android:text="0"
                    android:textColor="@color/color_02" />

            </LinearLayout>
        </LinearLayout>

    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_reorder"
            android:visibility="visible"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:layout_gravity="bottom"
            android:textSize="17sp"
            android:textColor="@android:color/white"
            android:text="@string/txt_reorder"
            android:background="@drawable/btn_them_button"
            app:font="custom1" />

        <TextView
            android:id="@+id/tv_impossible_reorder"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:layout_gravity="bottom"
            android:textSize="17sp"
            android:textColor="@android:color/white"
            android:text="@string/txt_reorder"
            android:background="@color/color_46"
            app:font="custom1" />
    </RelativeLayout>
</LinearLayout>
